FINERACT-2234: Improve accrual activity posting business step performance